added content and styles

--- a/index.html
+++ b/index.html
@@ -71,15 +71,155 @@
       </nav>
     </header>
 
+    <section class="wellcome">
+      <p class="wellcome-text special-elite-regular">
+        Enjoy unlimited movies everywhere!
+      </p>
+    </section>
+
     <main>
-      <section>
-        <a href="https://facebook.com" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-      </section>
+      <form class="search-form">
+        <!-- checkboxs -->
+        <fieldset class="main-check" id="catCont"></fieldset>
+
+        <!-- search form -->
+        <fieldset class="search-field">
+          <label for="search">
+            <input type="text" name="search" id="search" />
+          </label>
+        </fieldset>
+
+        <!-- submit button-->
+        <div>
+          <button type="button" id="form-search-bttn">
+            <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+          </button>
+        </div>
+      </form>
+
+      <!--cards-->
+      <div class="cards-container row justify-content-around" id="cardsCont">
+        <div class="card">
+          <img class="card-img-top" src="./assets/img/mov1.webp" alt="Shogun" />
+
+          <div class="card-body">
+            <h5 class="card-title">Shogun</h5>
+
+            <div class="cardFooter">
+              <p>Feb 27, 2024</p>
+
+              <a href="./pages/details.html" class="btn">View More...</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            class="card-img-top"
+            src="./assets/img/mov2.webp"
+            alt="Monkey Man"
+          />
+
+          <div class="card-body">
+            <h5 class="card-title">Monkey Man</h5>
+
+            <div class="cardFooter">
+              <p>Apr 03, 2024</p>
+
+              <a href="./pages/details.html" class="btn">View More...</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            class="card-img-top"
+            src="./assets/img/mov3.webp"
+            alt="Fallout"
+          />
+
+          <div class="card-body">
+            <h5 class="card-title">Fallout</h5>
+
+            <div class="cardFooter">
+              <p>Apr 10, 2024</p>
+
+              <a href="./pages/details.html" class="btn">View More...</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            class="card-img-top"
+            src="./assets/img/mov4.webp"
+            alt="Love Lies Bleending"
+          />
+
+          <div class="card-body">
+            <h5 class="card-title">Love Lies Bleending</h5>
+
+            <div class="cardFooter">
+              <p>Mar 08, 2024</p>
+
+              <a href="./pages/details.html" class="btn">View More...</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            class="card-img-top"
+            src="./assets/img/mov5.webp"
+            alt="Dune: part 2"
+          />
+
+          <div class="card-body">
+            <h5 class="card-title">Dune: part 2</h5>
+
+            <div class="cardFooter">
+              <p>Feb 29, 2024</p>
+
+              <a href="./pages/details.html" class="btn">View More...</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            class="card-img-top"
+            src="./assets/img/mov6.webp"
+            alt="Knuckles"
+          />
+
+          <div class="card-body">
+            <h5 class="card-title">Knuckles</h5>
+
+            <div class="cardFooter">
+              <p>Apr 26, 2024</p>
+
+              <a href="./pages/details.html" class="btn">View More...</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="social">
+        <a href="https://www.facebook.com" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+
+        <a href="https://www.instagram.com" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+
+        <a href="https://www.twitter.com" target="_blank"
+          ><i class="fa-brands fa-x-twitter"></i
+        ></a>
+      </div>
+    </footer>
 
     <!--Bootstrap-->
     <script
