--- a/pages/contact.html
+++ b/pages/contact.html
@@ -78,14 +78,45 @@
     </header>
 
     <main>
-      <section>
-        <a href="https://facebook.com" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-      </section>
+      <!--formulary-->
+      <section class="formulary">
+      <h2 class="contact-form-title special-elite-regular">Contact us</h2>
+
+        <form>
+          <input type="text" name="name" id="name" placeholder="Name" required />
+
+          <input
+            type="text"
+            name="lastname"
+            id="lastname"
+            placeholder="Lastname" required
+          />
+
+          <input type="email" name="email" id="email" placeholder="Email" required />
+
+          <label class="message-label" for="message">Message</label>
+
+          <textarea name="message" id="message" required></textarea>
+
+          <button type="submit">Send</button>
+        </form>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="social">
+        <a href="https://www.facebook.com" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+
+        <a href="https://www.instagram.com" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+
+        <a href="https://www.twitter.com" target="_blank"
+          ><i class="fa-brands fa-x-twitter"></i
+        ></a>
+      </div>
+    </footer>
 
     <!--Bootstrap-->
     <script
