--- a/pages/details.html
+++ b/pages/details.html
@@ -32,7 +32,7 @@
     <!--css-->
     <link rel="stylesheet" href="../assets/styles/styles.css" />
 
-    <title>Login</title>
+    <title>Monkey Man</title>
   </head>
 
   <body>
@@ -61,37 +61,48 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-item nav-link" href="../index.html">Home</a>
 
-            <a class="nav-item nav-link" href="../pages/contact.html">Contact</a>
+            <a class="nav-item nav-link" href="../pages/contact.html"
+              >Contact</a
+            >
 
             <a class="nav-item nav-link" href="../pages/about.html">About</a>
 
-            <a class="nav-item nav-link" href="../pages/login.html" id="active">Login</a>
-          </div>
+            <a class="nav-item nav-link" href="../pages/login.html">Login</a>
           </div>
         </div>
       </nav>
     </header>
 
-    <main>
-      <!--formulary-->
-      <section class="formulary">
-      <h2 class="contact-form-title special-elite-regular">Login</h2>
-
-        <form>
-          <input type="email" name="email" id="email" placeholder="Email" required />
-
-          <input type="password" name="password" id="password" placeholder="Password" required />
-
-          <label for="stayConn" class="checkbox-login">
-            <input type="checkbox" name="stayConn" id="stayConn" value="stayConn">Stay connected
-          </label>
-
-          <button type="submit">Enter</button>
-        </form>
-        
-        <div class="sing-up">
-          <p class="sing-up">Don't have an account? <a class="special-elite-regular" href="./singUp.html">Sing up</a></p>
+    <main class="main-details">
+      <!-- card -->
+      <div class="cards-container card-details">
+        <div class="card card-img">
+          <img
+            class="img-details"
+            src="../assets/img/mov2.webp"
+            alt="Monkey Man"
+          />
         </div>
+
+        <div class="card card-body card-body-details">
+          <h2 class="card-title">Monkey Man</h2>
+
+          <p>One small ember can burn down everything.</p>
+
+          <p>Overview</p>
+
+          <p class="card-text-extended">
+            Kid is an anonymous young man who ekes out a meager living in an
+            underground fight club where, night after night, wearing a gorilla
+            mask, he is beaten bloody by more popular fighters for cash. After
+            years of suppressed rage, Kid discovers a way to infiltrate the
+            enclave of the city’s sinister elite. As his childhood trauma boils
+            over, his mysteriously scarred hands unleash an explosive campaign
+            of retribution to settle the score with the men who took everything
+            from him.
+          </p>
+        </div>
+      </div>
     </main>
 
     <footer>
