--- a/pages/about.html
+++ b/pages/about.html
@@ -76,14 +76,24 @@
     </header>
 
     <main>
-      <section>
-        <a href="https://facebook.com" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-      </section>
+      <section></section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="social">
+        <a href="https://www.facebook.com" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+
+        <a href="https://www.instagram.com" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+
+        <a href="https://www.twitter.com" target="_blank"
+          ><i class="fa-brands fa-x-twitter"></i
+        ></a>
+      </div>
+    </footer>
 
     <!--Bootstrap-->
     <script
