functions to create cards for movies and search filter was added

--- a/index.html
+++ b/index.html
@@ -96,111 +96,13 @@
       </form>
 
       <!--cards-->
-      <div class="cards-container row justify-content-around" id="cardsCont">
-        <div class="card">
-          <img class="card-img-top" src="./assets/img/mov1.webp" alt="Shogun" />
+      <div
+        class="cards-container row justify-content-around"
+        id="cardsCont"
+      ></div>
 
-          <div class="card-body">
-            <h5 class="card-title">Shogun</h5>
-
-            <div class="cardFooter">
-              <p>Feb 27, 2024</p>
-
-              <a href="./pages/details.html" class="btn">View More...</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            class="card-img-top"
-            src="./assets/img/mov2.webp"
-            alt="Monkey Man"
-          />
-
-          <div class="card-body">
-            <h5 class="card-title">Monkey Man</h5>
-
-            <div class="cardFooter">
-              <p>Apr 03, 2024</p>
-
-              <a href="./pages/details.html" class="btn">View More...</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            class="card-img-top"
-            src="./assets/img/mov3.webp"
-            alt="Fallout"
-          />
-
-          <div class="card-body">
-            <h5 class="card-title">Fallout</h5>
-
-            <div class="cardFooter">
-              <p>Apr 10, 2024</p>
-
-              <a href="./pages/details.html" class="btn">View More...</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            class="card-img-top"
-            src="./assets/img/mov4.webp"
-            alt="Love Lies Bleending"
-          />
-
-          <div class="card-body">
-            <h5 class="card-title">Love Lies Bleending</h5>
-
-            <div class="cardFooter">
-              <p>Mar 08, 2024</p>
-
-              <a href="./pages/details.html" class="btn">View More...</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            class="card-img-top"
-            src="./assets/img/mov5.webp"
-            alt="Dune: part 2"
-          />
-
-          <div class="card-body">
-            <h5 class="card-title">Dune: part 2</h5>
-
-            <div class="cardFooter">
-              <p>Feb 29, 2024</p>
-
-              <a href="./pages/details.html" class="btn">View More...</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            class="card-img-top"
-            src="./assets/img/mov6.webp"
-            alt="Knuckles"
-          />
-
-          <div class="card-body">
-            <h5 class="card-title">Knuckles</h5>
-
-            <div class="cardFooter">
-              <p>Apr 26, 2024</p>
-
-              <a href="./pages/details.html" class="btn">View More...</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!--no results container-->
+      <div class="no-results-container" id="no-results"></div>
     </main>
 
     <footer>
@@ -226,6 +128,7 @@
       crossorigin="anonymous"
     ></script>
 
+    <!--js-->
     <script src="./js/main.js"></script>
   </body>
 </html>
