functions to create selected movie's details was added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <main>
       <form class="search-form">
         <!-- checkboxs -->
-        <fieldset class="main-check" id="catCont"></fieldset>
+        <!--<fieldset class="main-check" id="catCont"></fieldset>-->
 
         <!-- search form -->
         <fieldset class="search-field">
