--- a/pages/details.html
+++ b/pages/details.html
@@ -32,7 +32,7 @@
     <!--css-->
     <link rel="stylesheet" href="../assets/styles/styles.css" />
 
-    <title>Monkey Man</title>
+    <title id="title">...</title>
   </head>
 
   <body>
@@ -73,34 +73,7 @@
 
     <main class="main-details">
       <!-- card -->
-      <div class="cards-container card-details">
-        <div class="card card-img">
-          <img
-            class="img-details"
-            src="../assets/img/mov2.webp"
-            alt="Monkey Man"
-          />
-        </div>
-
-        <div class="card card-body card-body-details">
-          <h2 class="card-title">Monkey Man</h2>
-
-          <p>One small ember can burn down everything.</p>
-
-          <p>Overview</p>
-
-          <p class="card-text-extended">
-            Kid is an anonymous young man who ekes out a meager living in an
-            underground fight club where, night after night, wearing a gorilla
-            mask, he is beaten bloody by more popular fighters for cash. After
-            years of suppressed rage, Kid discovers a way to infiltrate the
-            enclave of the city’s sinister elite. As his childhood trauma boils
-            over, his mysteriously scarred hands unleash an explosive campaign
-            of retribution to settle the score with the men who took everything
-            from him.
-          </p>
-        </div>
-      </div>
+      <div class="cards-container card-details" id="details"></div>
     </main>
 
     <footer>
@@ -126,6 +99,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./js/main.js"></script>
+    <script src="../js/details.js"></script>
   </body>
 </html>
