fixed minor bugs and added styles

--- a/pages/details.html
+++ b/pages/details.html
@@ -61,11 +61,9 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-item nav-link" href="../index.html">Home</a>
 
-            <a class="nav-item nav-link" href="../pages/contact.html"
-              >Contact</a
-            >
+            <a class="nav-item nav-link" href="./contact.html">Contact</a>
 
-            <a class="nav-item nav-link" href="../pages/login.html">Login</a>
+            <a class="nav-item nav-link" href="./login.html">Login</a>
           </div>
         </div>
       </nav>
