--- a/pages/login.html
+++ b/pages/login.html
@@ -61,9 +61,9 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-item nav-link" href="../index.html">Home</a>
 
-            <a class="nav-item nav-link" href="../pages/contact.html">Contact</a>
+            <a class="nav-item nav-link" href="./contact.html">Contact</a>
 
-            <a class="nav-item nav-link" href="../pages/login.html" id="active">Login</a>
+            <a class="nav-item nav-link" href="./login.html" id="active">Login</a>
           </div>
         </div>
       </nav>
@@ -83,7 +83,7 @@
             <input type="checkbox" name="stayConn" id="stayConn" value="stayConn">Stay connected
           </label>
 
-          <button type="submit">Enter</button>
+          <button type="submit" id="login-form">Enter</button>
         </form>
         
         <div class="sing-up">
@@ -114,6 +114,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./js/main.js"></script>
+    <!--js-->
+    <script src="../js/login.js"></script>
   </body>
 </html>
