--- a/pages/singUp.html
+++ b/pages/singUp.html
@@ -93,9 +93,9 @@
 
           <input type="password" name="password" id="password" placeholder="Password" required />
 
-          <input type="password" name="password" id="password" placeholder="repeat password" required />
+          <input type="password" name="password2" id="password2" placeholder="repeat password" required />
 
-          <button type="submit">Register</button>
+          <button type="submit" id="submit-singup">Register</button>
         </form>
     </main>
 
@@ -122,6 +122,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./js/main.js"></script>
+    <script src="../js/singup.js"></script>
   </body>
 </html>
