added stucture, logic and styles for user page

--- a/pages/user.html
+++ b/pages/user.html
@@ -74,7 +74,26 @@
       </nav>
     </header>
 
+    <section class="user-info">
+        <div>
+          <img class="profile-image" src="../assets/img/user.jpg" alt="user img">
+        </div>
+
+        <div class="user-name special-elite-regular">
+          <p>Robert</p>
+          <p>Gray</p>
+        </div>
+    </section>
+
     <main>
+      <section class="user-wellcome">
+        <h2 class="special-elite-regular" >Your Favorites</h2>
+      </section>
+
+      <div
+        class="cards-container row justify-content-around"
+        id="cardsCont"
+      ></div>
     </main>
 
     <footer>
@@ -101,6 +120,6 @@
     ></script>
 
     <!--js-->
-    <!--<script src="../js/"></script>-->
+    <script src="../js/user.js"></script>
   </body>
 </html>
